<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="vertical"
        android:paddingLeft="13dip"
        android:paddingRight="3dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:text="考勤消息"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:background="#000000" />-->


        <TextView
            android:visibility="gone"
            android:id="@+id/tvappkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dip"
            android:text=""
            android:textSize="15sp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tvappsecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="3dip"
            android:text=""

            android:textSize="15sp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tvmastersecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="3dip"
            android:text=""

            android:textSize="15sp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tvappid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="3dip"
            android:text=""
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:orientation="horizontal">

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/clientid"

                android:textSize="15sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tvclientid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/no_clientid"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_pmsg"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:text="@string/pmsg" />

            <Button
                android:id="@+id/btn_psmsg"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/psmsg" />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#000000" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tvloglabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:text="消息"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvlog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="left|top"
            android:minHeight="400dp"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_bg_selector"
                android:layout_marginRight="2dp"
                android:text="@string/clear"></Button>

            <Button
                android:id="@+id/btn_service"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_bg_selector"
                android:layout_marginRight="2dp"

                android:text="@string/start"></Button>

            <Button
                android:id="@+id/btn_bind_alias"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_bg_selector"
                android:layout_marginRight="2dp"

                android:text="@string/bind_alias" />

            <Button
                android:id="@+id/btn_unbind_alias"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_bg_selector"
                android:layout_marginRight="2dp"

                android:text="@string/unbind_alias" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btnAddTag"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_tag"></Button>

            <Button
                android:id="@+id/btnVersion"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/version"></Button>

            <Button
                android:id="@+id/btnSilentime"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/silentime"></Button>

            <Button
                android:id="@+id/btnGetCid"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/getclientid"></Button>
        </LinearLayout>

    </LinearLayout>

</ScrollView>